--- a/package.json
+++ b/package.json
@@ -1,23 +1,40 @@
 {
-  "name": "nextjs-boilerplate-v13",
+  "name": "nextjs-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fix:lint": "eslint . --fix",
+    "commit": "git cz",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@next/font": "13.1.6",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@next/env": "^13.1.6",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "8.33.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "next-sitemap": "^3.1.49",
+    "prettier": "^2.8.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
