--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "@next/env": "^13.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.33.0",
     "eslint-plugin-prettier": "^4.2.1",
